--- a/src/main/resources/org/example/controller/CreateListView.fxml
+++ b/src/main/resources/org/example/controller/CreateListView.fxml
@@ -1,23 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="344.0" style="-fx-background-color: #004777;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.ControllerCreateList">
+<AnchorPane prefHeight="400.0" prefWidth="344.0" style="-fx-background-color: #4282a6;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.ControllerCreateList">
    <children>
       <Text fill="WHITE" layoutX="105.0" layoutY="67.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nueva Lista">
          <font>
-            <Font size="36.0" />
+            <Font name="Roboto Thin" size="36.0" />
          </font>
       </Text>
       <TextField fx:id="nameList" layoutX="105.0" layoutY="109.0" prefHeight="31.0" prefWidth="194.0" />
-      <Text fill="WHITE" layoutX="36.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre:" />
+      <Text fill="WHITE" layoutX="14.0" layoutY="129.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre:" />
       <Text layoutX="29.0" layoutY="197.0" strokeType="OUTSIDE" strokeWidth="0.0" />
-      <Text fill="WHITE" layoutX="14.0" layoutY="186.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Descripcion:" />
+      <Text fill="WHITE" layoutX="14.0" layoutY="186.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Descripción:" />
       <Button fx:id="addList" layoutX="136.0" layoutY="323.0" mnemonicParsing="false" onAction="#addList" onMouseClicked="#addList" style="-fx-background-color: #ffffff;" text="Aceptar" />
       <TextArea fx:id="descriptionList" layoutX="108.0" layoutY="170.0" prefHeight="136.0" prefWidth="187.0" style="-fx-background-color: #ffffff;" />
    </children>
