--- a/src/main/resources/org/example/controller/ModListView.fxml
+++ b/src/main/resources/org/example/controller/ModListView.fxml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="344.0" style="-fx-background-color: #004777;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.ControllerModList">
+<AnchorPane prefHeight="400.0" prefWidth="344.0" style="-fx-background-color: #4282a6;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.ControllerModList">
    <children>
-      <Text fill="WHITE" layoutX="52.0" layoutY="66.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" Modifica tu Lista">
+      <Text fill="WHITE" layoutX="81.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" Modifica tu Lista">
          <font>
-            <Font size="36.0" />
+            <Font name="Roboto Light" size="24.0" />
          </font>
       </Text>
       <TextField fx:id="nameList" layoutX="105.0" layoutY="109.0" prefHeight="31.0" prefWidth="194.0" />
