--- a/src/main/resources/org/example/controller/addArtist.fxml
+++ b/src/main/resources/org/example/controller/addArtist.fxml
@@ -1,20 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.ControllerAddArtist">
+<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.ControllerAddArtist">
     <top>
-        <AnchorPane prefHeight="140.0" prefWidth="396.0" style="-fx-background-color: #1DB954FF;" BorderPane.alignment="CENTER">
+        <AnchorPane prefHeight="140.0" prefWidth="396.0" style="-fx-background-color: #4282a6;" BorderPane.alignment="CENTER">
             <children>
                 <Text fill="WHITE" layoutX="172.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" text="NUEVO ARTISTA" textAlignment="CENTER" wrappingWidth="255.73676300048828">
                     <font>
@@ -42,7 +36,7 @@
                     <font>
                         <Font name="System Bold Italic" size="16.0" />
                     </font></Label>
-                <Button layoutX="135.0" layoutY="203.0" mnemonicParsing="false" onAction="#addArtist" prefHeight="42.0" prefWidth="319.0" style="-fx-background-color: #1DB954FF;" text="GUARDAR" textFill="#fcfcfc">
+                <Button layoutX="135.0" layoutY="203.0" mnemonicParsing="false" onAction="#addArtist" prefHeight="42.0" prefWidth="319.0" style="-fx-background-color: #4282a6;" text="GUARDAR" textFill="#fcfcfc">
                     <font>
                         <Font name="System Bold Italic" size="16.0" />
                     </font>
