--- a/src/main/resources/org/example/controller/addSongofList.fxml
+++ b/src/main/resources/org/example/controller/addSongofList.fxml
@@ -1,26 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="424.0" prefWidth="532.0" style="-fx-background-color: #004777;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.ControllerAddListonSong">
+<AnchorPane prefHeight="424.0" prefWidth="532.0" style="-fx-background-color: #4282a6;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.ControllerAddListonSong">
     <children>
         <Text layoutX="29.0" layoutY="197.0" strokeType="OUTSIDE" strokeWidth="0.0" />
         <Button fx:id="addsongList" layoutX="228.0" layoutY="339.0" mnemonicParsing="false" onAction="#addSongofList" style="-fx-background-color: #ffffff;" text="Aceptar" />
-        <Label layoutX="198.0" prefHeight="67.0" prefWidth="136.0" text="elige la lista" textFill="WHITE">
+        <Label layoutX="198.0" prefHeight="67.0" prefWidth="136.0" text="Elige la lista" textFill="WHITE">
             <font>
-                <Font name="Arial Rounded MT Bold" size="21.0" />
+                <Font name="Roboto Light" size="21.0" />
             </font>
         </Label>
         <ListView fx:id="listMyList" layoutX="166.0" layoutY="67.0" prefHeight="179.0" prefWidth="200.0" />
-        <Label layoutX="160.0" layoutY="246.0" prefHeight="67.0" prefWidth="169.0" text="id de la cancion:" textFill="WHITE">
+        <Label layoutX="160.0" layoutY="246.0" prefHeight="67.0" prefWidth="169.0" text="Id de la cancion:" textFill="WHITE">
             <font>
-                <Font name="Arial Rounded MT Bold" size="21.0" />
+                <Font name="Roboto Light" size="21.0" />
             </font>
         </Label>
         <TextField fx:id="textid" layoutX="330.0" layoutY="267.0" prefHeight="26.0" prefWidth="49.0" />
