--- a/src/main/resources/org/example/controller/album.fxml
+++ b/src/main/resources/org/example/controller/album.fxml
@@ -1,17 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.example.controller.ControllerAlbum"
-            prefHeight="400.0" prefWidth="600.0">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #4282a6;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.ControllerAlbum">
     <children>
         <TableView fx:id="tableView" layoutX="26.0" layoutY="135.0" prefHeight="545.0" prefWidth="716.0" style="-fx-background-color: white; -fx-border-color: #020113; -fx-border-style: hidden hidden hidden hidden;">
             <columns>
@@ -44,4 +37,3 @@
         </Button>
     </children>
 </AnchorPane>
-
