--- a/src/main/resources/org/example/controller/CreateListView.fxml
+++ b/src/main/resources/org/example/controller/CreateListView.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="344.0" style="-fx-background-color: #4282a6;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.ControllerCreateList">
+<AnchorPane prefHeight="400.0" prefWidth="344.0" style="-fx-background-color: #265599;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.ControllerCreateList">
    <children>
       <Text fill="WHITE" layoutX="105.0" layoutY="67.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nueva Lista">
          <font>
