--- a/src/main/resources/org/example/controller/addAlbum.fxml
+++ b/src/main/resources/org/example/controller/addAlbum.fxml
@@ -6,11 +6,11 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.ControllerAddAlbum">
+<BorderPane prefHeight="834.0" prefWidth="1159.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.ControllerAddAlbum">
    <top>
-      <AnchorPane prefHeight="140.0" prefWidth="396.0" style="-fx-background-color: #4282a6;" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="140.0" prefWidth="396.0" style="-fx-background-color: #000e25;" BorderPane.alignment="CENTER">
          <children>
-            <Text fill="WHITE" layoutX="172.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" text="NUEVO ÁLBUM" textAlignment="CENTER" wrappingWidth="255.73676300048828">
+            <Text fill="WHITE" layoutX="319.0" layoutY="84.0" strokeType="OUTSIDE" strokeWidth="0.0" text="NUEVO ÁLBUM" textAlignment="CENTER" wrappingWidth="462.73673248291016">
                <font>
                   <Font name="System Bold Italic" size="36.0" />
                </font></Text>
@@ -23,45 +23,46 @@
    <center>
       <AnchorPane prefHeight="372.0" prefWidth="388.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
          <children>
-            <TextField fx:id="txtName" layoutX="225.0" layoutY="22.0" style="-fx-border-style: hidden hidden solid hidden; -fx-border-color: #1DB954FF; -fx-background-color: white;" />
-            <Label layoutX="110.0" layoutY="22.0" text="NOMBRE" textFill="#265599">
+            <Label layoutX="368.0" layoutY="87.0" text="NOMBRE" textFill="#265599">
                <font>
                   <Font name="System Bold Italic" size="16.0" />
                </font></Label>
-            <Label layoutX="110.0" layoutY="75.0" text="FOTO" textFill="#265599">
+            <Label layoutX="223.0" layoutY="241.0" prefHeight="26.0" prefWidth="154.0" text="FECHA" textFill="#265599">
                <font>
                   <Font name="System Bold Italic" size="16.0" />
                </font></Label>
-            <Label layoutX="108.0" layoutY="111.0" prefHeight="26.0" prefWidth="154.0" text="FECHA" textFill="#265599">
+            <Label layoutX="369.0" layoutY="321.0" text="ARTISTA" textFill="#265599">
                <font>
                   <Font name="System Bold Italic" size="16.0" />
                </font></Label>
-            <Label layoutX="98.0" layoutY="173.0" text="ARTISTA" textFill="#265599">
+            <Label layoutX="286.0" layoutY="241.0" text="DE PUBLICACIÓN" textFill="#265599">
                <font>
                   <Font name="System Bold Italic" size="16.0" />
                </font></Label>
-            <Label layoutX="66.0" layoutY="135.0" text="DE PUBLICACIÓN" textFill="#265599">
-               <font>
-                  <Font name="System Bold Italic" size="16.0" />
-               </font></Label>
-            <Button layoutX="193.0" layoutY="221.0" mnemonicParsing="false" onAction="#addCosumer" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: #4282a6;" text="GUARDAR" textFill="#fcfcfc">
+            <Button layoutX="462.0" layoutY="465.0" mnemonicParsing="false" onAction="#addCosumer" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: #000e25;" text="GUARDAR" textFill="#fcfcfc">
                <font>
                   <Font name="System Bold Italic" size="16.0" />
                </font>
             </Button>
-            <Button fx:id="foto" layoutX="226.0" layoutY="75.0" mnemonicParsing="false" onAction="#elegirFoto" prefHeight="26.0" prefWidth="146.0" text="Seleccione el archivo" />
-            <Pane layoutX="371.0" layoutY="35.0" prefHeight="200.0" prefWidth="200.0">
+            <Button fx:id="foto" layoutX="479.0" layoutY="163.0" mnemonicParsing="false" onAction="#elegirFoto" prefHeight="26.0" prefWidth="246.0" text="Seleccione el archivo" />
+            <Pane layoutX="855.0" layoutY="113.0" prefHeight="200.0" prefWidth="200.0">
                <children>
-                  <ImageView fx:id="imageView" fitHeight="150.0" fitWidth="200.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="imageView" fitHeight="208.0" fitWidth="208.0" layoutX="-4.0" layoutY="-6.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </Pane>
-            <ComboBox fx:id="txtArtista" layoutX="226.0" layoutY="173.0" prefWidth="150.0" />
-            <DatePicker fx:id="txtDate" layoutX="226.0" layoutY="122.0" prefHeight="26.0" prefWidth="148.0" />
-            <Button layoutX="491.0" layoutY="221.0" mnemonicParsing="false" onAction="#volver" prefHeight="19.0" prefWidth="79.0" style="-fx-background-color: #4282a6;" text="Volver" textFill="#fcfcfc">
+            <ComboBox fx:id="txtArtista" layoutX="484.0" layoutY="321.0" prefHeight="26.0" prefWidth="255.0" />
+            <DatePicker fx:id="txtDate" layoutX="478.0" layoutY="241.0" prefHeight="26.0" prefWidth="256.0" />
+            <Button layoutX="844.0" layoutY="465.0" mnemonicParsing="false" onAction="#volver" prefHeight="19.0" prefWidth="79.0" style="-fx-background-color: #000e25;" text="Volver" textFill="#fcfcfc">
                <font>
                   <Font name="System Bold Italic" size="16.0" />
                </font>
             </Button>
+            <Label layoutX="381.0" layoutY="160.0" text="FOTO" textFill="#265599">
+               <font>
+                  <Font name="System Bold Italic" size="16.0" />
+               </font>
+            </Label>
+            <TextField fx:id="txtName" layoutX="476.0" layoutY="86.0" prefHeight="27.0" prefWidth="243.0" style="-fx-border-style: hidden hidden solid hidden; -fx-border-color: #1DB954FF; -fx-background-color: white;" />
          </children>
       </AnchorPane>
    </center>
