--- a/src/main/resources/org/example/controller/addComment.fxml
+++ b/src/main/resources/org/example/controller/addComment.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="424.0" prefWidth="532.0" style="-fx-background-color: #4282a6;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.ControllerAddComment">
+<AnchorPane prefHeight="424.0" prefWidth="532.0" style="-fx-background-color: #265599;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.ControllerAddComment">
     <children>
         <Text layoutX="29.0" layoutY="197.0" strokeType="OUTSIDE" strokeWidth="0.0" />
         <Button fx:id="addComment" layoutX="328.0" layoutY="250.0" mnemonicParsing="false" onAction="#addComment" style="-fx-background-color: #ffffff;" text="Aceptar" />
