--- a/src/main/resources/org/example/controller/homeAdmin.fxml
+++ b/src/main/resources/org/example/controller/homeAdmin.fxml
@@ -1,31 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
 <BorderPane fx:id="bp" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="834.0" prefWidth="1159.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.ControllerAdminHome">
    <left>
-      <VBox prefHeight="834.0" prefWidth="296.0" style="-fx-background-color: #004777; -fx-border-color: #6a9ce4; -fx-border-width: 0px 8px 0px 0px;" BorderPane.alignment="CENTER">
+      <VBox prefHeight="834.0" prefWidth="296.0" style="-fx-background-color: #000e25; -fx-border-color: #6a9ce4; -fx-border-width: 0px 8px 0px 0px;" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="168.0" fitWidth="296.0" pickOnBounds="true" preserveRatio="true" />
-            <Button mnemonicParsing="false" onMouseClicked="#artist" prefHeight="166.0" prefWidth="296.0" style="-fx-background-color: #004777; -fx-border-color: #6a9ce4; -fx-border-width: 2px 0px 2px 0px;" text="ARTISTA" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+            <Button mnemonicParsing="false" onMouseClicked="#artist" prefHeight="166.0" prefWidth="296.0" style="-fx-background-color: #000e25; -fx-border-color: #6a9ce4; -fx-border-width: 2px 0px 2px 0px;" text="ARTISTA" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
                <font>
                   <Font name="System Bold Italic" size="24.0" />
                </font>
             </Button>
-            <Button mnemonicParsing="false" onMouseClicked="#album" prefHeight="166.0" prefWidth="296.0" style="-fx-background-color: #004777; -fx-border-color: #6a9ce4; -fx-border-width: 0px 0px 2px 0px;" text="ALBUM" textFill="WHITE" textOverrun="LEADING_ELLIPSIS">
+            <Button mnemonicParsing="false" onMouseClicked="#album" prefHeight="166.0" prefWidth="296.0" style="-fx-background-color: #000e25; -fx-border-color: #6a9ce4; -fx-border-width: 0px 0px 2px 0px;" text="ALBUM" textFill="WHITE" textOverrun="LEADING_ELLIPSIS">
                <font>
                   <Font name="System Bold Italic" size="24.0" />
                </font>
             </Button>
-            <Button mnemonicParsing="false" onMouseClicked="#song" prefHeight="166.0" prefWidth="296.0" style="-fx-background-color: #004777; -fx-border-color: #6a9ce4; -fx-border-width: 0px 0px 2px 0px;" text="CANCION" textFill="WHITE">
+            <Button mnemonicParsing="false" onMouseClicked="#song" prefHeight="166.0" prefWidth="296.0" style="-fx-background-color: #000e25; -fx-border-color: #6a9ce4; -fx-border-width: 0px 0px 2px 0px;" text="CANCION" textFill="WHITE">
                <font>
                   <Font name="System Bold Italic" size="24.0" />
                </font>
             </Button>
-            <Button mnemonicParsing="false" onAction="#switchLogin" prefHeight="166.0" prefWidth="296.0" style="-fx-background-color: #004777;" text="SALIR" textFill="WHITE">
+            <Button mnemonicParsing="false" onAction="#switchLogin" prefHeight="166.0" prefWidth="296.0" style="-fx-background-color: #000e25;" text="SALIR" textFill="WHITE">
                <font>
                   <Font name="System Bold Italic" size="24.0" />
                </font>
@@ -34,7 +32,7 @@
       </VBox>
    </left>
    <center>
-      <AnchorPane fx:id="ap" prefHeight="834.0" prefWidth="863.0" style="-fx-background-color: #004777;" BorderPane.alignment="CENTER">
+      <AnchorPane fx:id="ap" prefHeight="834.0" prefWidth="863.0" style="-fx-background-color: #000e25;" BorderPane.alignment="CENTER">
          <children>
             <TableView fx:id="myartists" layoutX="52.0" layoutY="113.0" prefHeight="580.0" prefWidth="742.0" style="-fx-background-color: #6a9ce4;">
               <columns>
